--- a/to-do.css
+++ b/to-do.css
@@ -23,16 +23,26 @@ body{
   cursor: pointer;
 }
 .box{
-  margin-left: 33%;
+  margin-left: 30%;
   align-items: center;
   font-size: 18px;
-  width: 35%;
+  width: 40%;
   border-style: solid;
   background-color: #DFDF54;
   border-color: #DFDF54;
   border-top-right-radius: 25px;
   border-bottom-left-radius: 25px;
   padding: 10px;
+}
+.column {
+  float: left;
+  width: 70%;
+}
+
+/* Clear floats after the columns */
+.column1{
+  float:right;
+  width:30%;
 }
 .par{
   font-size: 30px;
@@ -44,7 +54,7 @@ body{
   float: left;
 }
 .li{
-  font-size: 40px;
+  font-size: 35px;
 }
 .line1{
   border-width: 20px;
@@ -54,6 +64,9 @@ body{
   width: 85%;
 }
 .btn2{
+  margin-top: 17%;
+  margin-bottom: 50%;
+  transform: translateX(-50%)translateY(-50%);
   background-color: #911b1b;
   color: white;
   font-size: 20px;
