--- a/to-do.css
+++ b/to-do.css
@@ -35,14 +35,26 @@ body{
   padding: 10px;
 }
 .column {
+  word-wrap: break-word;
+  overflow-wrap: break-word;
   float: left;
   width: 70%;
+  height: 1%;
 }
-
+.column1 {
+  float: right;
+  width: 20%;
+  height: 1%;
+}
+.row{
+  height: 1%;
+  overflow: hidden;
+}
 /* Clear floats after the columns */
-.column1{
-  float:right;
-  width:30%;
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
 }
 .par{
   font-size: 30px;
@@ -64,7 +76,7 @@ body{
   width: 85%;
 }
 .btn2{
-  margin-top: 17%;
+  margin-top: 20%;
   margin-bottom: 50%;
   transform: translateX(-50%)translateY(-50%);
   background-color: #911b1b;
